Define the parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,7 @@
 name = "bidir-type-inference"
 version = "0.1.0"
 authors = ["Niko Matsakis <niko@alum.mit.edu>"]
+
+[dependencies]
+rusty-peg = "0.0"
+
